# uls

./: .gitignore  1  2  3  CMakeLists.txt  Makefile  diff1  diff2  fffile  g  header.h  link-file  main.c  mx_big_destroyer.c  mx_cols_and_rows.c  mx_data_init.c  mx_dir_parse.c  mx_errors_array.c  mx_files_count.c  mx_find_name_len.c  mx_get_bsize_num.c  mx_get_inode_num.c  mx_get_path.c  mx_get_real_cols.c  mx_get_win_size.c  mx_getstats.c  mx_itoa.c  mx_l_link.c  mx_l_uid.c  mx_output_1.c  mx_output_c.c  mx_output_file.c  mx_output_file_x.c  mx_output_l.c  mx_output_m.c  mx_output_x.c  mx_p_xattr.c  mx_parse_args.c  mx_print_colored.c  mx_print_dirs.c  (+37 more)
inc/: header.h  uls.h
libmx/: Makefile
libmx/inc/: libmx.h
libmx/src/: mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_file_to_str.c  mx_get_char_index.c  mx_get_substr_index.c  mx_itoa.c  mx_len_to_delim.c  (+34 more)
src/: itoa.c  main.c  mx_check_perm.c  mx_cols_and_rows.c  mx_data_init.c  mx_denied_error.c  mx_dir_parse.c  mx_errors_array.c  mx_files_count.c  mx_find_name_len.c  mx_get_bsize_num.c  mx_get_inode_num.c  mx_get_path.c  mx_get_real_cols.c  mx_get_real_size.c  mx_get_win_size.c  mx_getstats.c  mx_itoa.c  mx_l_gid.c  mx_l_size.c  mx_output_1.c  mx_output_c.c  mx_output_file.c  mx_output_file_x.c  mx_output_l.c  mx_output_m.c  mx_output_x.c  mx_p_xattr.c  mx_parse_args.c  mx_print_colored.c  mx_print_dirs.c  mx_print_errors.c  mx_print_files.c  mx_print_fname.c  mx_print_is.c  mx_print_link.c  mx_print_spaces.c  mx_print_total.c  mx_printchar.c  mx_printer.c  (+27 more)
